--- a/Alco/package.json
+++ b/Alco/package.json
@@ -24,13 +24,17 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "angularfire": "^2.3.0",
+    "firebase": "^4.10.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "typings": "^2.1.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular/cli": "^1.7.1",
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
