--- a/Alco/package.json
+++ b/Alco/package.json
@@ -24,12 +24,13 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "angularfire": "^2.3.0",
-    "angularfire2": "^4.0.0-rc0",
+    "angularfire2": "^5.0.0-rc.6",
+    "cordova": "^8.0.0",
     "firebase": "^4.10.1",
+    "ionic": "^3.19.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
+    "rxjs": "^5.5.6",
     "sw-toolbox": "3.6.0",
     "typings": "^2.1.1",
     "zone.js": "0.8.18"
