--- a/Alco/package.json
+++ b/Alco/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "adb": "^0.2.0",
+    "angular-oauth2-oidc": "^3.1.4",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
