--- a/Alco/package.json
+++ b/Alco/package.json
@@ -27,7 +27,7 @@
     "adb": "^0.2.0",
     "angular-oauth2-oidc": "^3.1.4",
     "angularfire2": "^5.0.0-rc.6",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.0.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
